# text2sql

./: .gitignore  README.md  TOOL_CALLING_GUIDE.md  Text2SQL Agent 2-Week Roadmap_.txt  Text2Sql Improvement Roadmap.txt  pyproject.toml  requirements.txt
configs/agents/: agent_with_mschema.yaml  agent_with_sqlfluff.yaml  agent_without_mschema.yaml  agent_without_sqlfluff.yaml  standard_agent.yaml
configs/datasets/: financial.yaml
configs/experiments/: ablation_mschema.yaml  bird_eval.yaml  deepeval_test.yaml  financial_eval_arctic.yaml  financial_eval_omnisql.yaml  financial_eval_qwen3.yaml  financial_eval_qwen3_0.6b.yaml  financial_eval_xiyansql.yaml  financial_model_comparison.yaml  financial_mschema_cpu_test.yaml  financial_test.yaml  financial_xiyanSQL_eval.yaml  financial_xiyanSQL_mschema_ablation.yaml  qwen3_8b_sqlfluff_ablation.yaml  test_cpu.yaml  test_setup.yaml
configs/models/: arctic_text2sql.yaml  omnisql.yaml  qwen3.yaml  qwen3_0.6b.yaml  qwen3_0.6b_cpu.yaml  qwen3_8b.yaml  xiyanSQL_qwencoder_7b.yaml
data/bird/: bird_dev.json  company.db
logs/: test_14131.err  test_14131.out
scripts/: create_dataset.py  run_agent_eval.py  run_eval.py  slurm_eval.sh  slurm_financial_eval.sh  slurm_run_experiment.sh  slurm_test.sh  test_agent_architecture.py  test_components.py  test_cpu_setup.py  test_full_pipeline.py  test_setup.py
src/agents/: __init__.py  base.py  factory.py  standard_agent.py
src/datasets/: base.py  bird.py  financial.py
src/evaluation/: agent_evaluator.py  evaluator.py  metrics.py
src/models/: base.py  vllm_model.py
(+9 files in other folders)
